# local-logic

./: README.md  docker-compose.yml  init.sh  run.py
docs/: evaluation.md  hyperparameters.md
docs/applications/: agentic.md  analytics.md  behavioral.md  devops.md  finance.md  genomic.md  medical.md  poker.md  project_management.md  reasoning.md  security.md
docs/tech/: phoenix.md
poker/: Dockerfile  README.md  docker-compose.yml  init.sh  phoenix_config.py  run.py  start.sh  start_poker.sh
poker copy/poker_bot/src/poker_bot/: main.py  poker_agent.py
poker copy/poker_bot/src/poker_bot/training_data/: training_history.json
poker copy/poker_bot/src/poker_bot/training_results/training_session_20241026-231450/: summary.txt
poker/poker_bot/: README.md  pyproject.toml
poker/poker_bot/docs/: readme.md  training.md
poker/poker_bot/docs/applications/: finance.md
poker/poker_bot/src/: setup.py
poker/poker_bot/src/poker_bot/: __init__.py  config.py  demo_mode.py  hand_evaluator.py  hyperparameter_tuner.py  main.py  opponent_model.py  poker_agent.py  poker_assistant.py  poker_signature.py  position_strategy.py  safety_checks.py  trainer.py
poker/poker_bot/src/poker_bot/training_data/: checkpoint_epoch_001.json
poker/poker_bot/src/poker_bot/training_results/training_session_20241026-233058/: summary.txt
poker/poker_bot/src/poker_bot/tuning_results/: best_params.json  tuning_results.json
poker/scripts/: healthcheck.sh  start.sh
reasoning/: start.sh
reasoning/poker_bot/src/poker_bot/: hand_evaluator.py  poker_assistant.py
reasoning/poker_bot/src/poker_bot/training_data/: checkpoint_epoch_001.json  checkpoint_epoch_004.json  checkpoint_epoch_006.json  checkpoint_epoch_008.json  checkpoint_epoch_009.json
reasoning/reasoning/src/: setup.py
reasoning/reasoning/src/reasoning_bot/: config.py  hyperparameter_tuner.py  main.py  opponent_model.py  poker_signature.py  reasoning_agent.py  reasoning_assistant.py  safety_checks.py  trainer.py
reasoning/reasoning/src/reasoning_bot/training_data/: checkpoint_epoch_002.json  checkpoint_epoch_003.json  checkpoint_epoch_005.json  checkpoint_epoch_007.json  checkpoint_epoch_010.json
reasoning/reasoning/src/reasoning_bot/tuning_results/: best_params.json
reasoning/reasoning_logs/: reasoning_history.json
src/: Dockerfile  app.py  docker-compose.yml  entrypoint.sh  install.sh  requirements.txt  run-interpreter.sh  run-os.sh  start.sh  uninstall-interpreter.sh
(+10 files in other folders)
