[tool.poetry]
name = "poker-bot"
version = "0.1.0"
description = ""
authors = ["rUv <ruv@ruv.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dspy = "^2.5.16"
openai = "^1.52.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poker_bot"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A poker decision assistant using AI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "treys",
    "pytest",
    "dspy",
    "scikit-learn",
    "colorama",
    "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
